# Abraxas

./: .gitignore  ABRAXAS_COMPREHENSIVE_ANALYSIS.md  Anchor.toml  CHECKLIST.md  CLEANUP_COMPLETION_REPORT.md  CRYPTO_NATIVE_STREAMLINE_COMPLETE.md  DEVELOPER_NOTES.md  FIAT_OFFRAMP_GUIDE.md  GROK_BUILD_SYNOPSIS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  M1_PULLDOWN_CODE_CHANGES.md  M1_PULLDOWN_COMPLETION_REPORT.md  M1_PULLDOWN_IMPLEMENTATION.md  M1_PULLDOWN_INDEX.md  M1_PULLDOWN_QUICK_START.md  M1_PULLDOWN_TECHNICAL_GUIDE.md  M1_PULLDOWN_VISUAL_GUIDE.md  MANUAL_RAILWAY_DEPLOYMENT.md  MONOLITH_STEP2_DEVICE_VALIDATION.md  MONOLITH_STRICT_CHECKLIST.md  MOONPAY_SETUP.md  NAUTICA_DAUGHTERS_IMPLEMENTATION.md  OFFRAMP_COMPLETE.md  OFFRAMP_MANIFEST.sh  OFFRAMP_QUICKSTART.md  QUICK_REFERENCE.md  RAIDO_FILE_INDEX.md  RAIDO_IMPLEMENTATION_COMPLETE.md  RAIDO_QUICK_REFERENCE.md  RAIDO_TRADING_ENGINE.md  RAILWAY_DEPLOYMENT_GUIDE.md  README.md  README_OFFRAMP.md  RENDER_DEPLOYMENT_GUIDE.md  SECURITY_AUDIT.md  SHARATHON_BACKEND_INTEGRATION.md  SHARATHON_COMPLETION_SUMMARY.md  SHARATHON_IMPLEMENTATION.md  SHARATHON_QUICK_START.md  (+14 more)
app/: .env.example  MULTI_LANGUAGE_SETUP_COMPLETE.md  TRANSLATION_CHECKLIST.md  TRANSLATION_COPY_PASTE_PATTERNS.md  capacitor.config.ts  index.html  package-lock.json  package.json  vite.config.ts
programs/abraxas/: Cargo.toml
programs/abraxas/src/: lib.rs
server/: .dockerignore  .env.example  .env.template  .gitignore  .npmignore  .railway.toml  .railwayignore  Dockerfile  README.md  build.sh  index.js  nixpacks.toml  package.json  railway.json  start.sh
(+561 files in other folders)
