[package]
name = "abraxas"
version = "0.1.0"
description = "Abraxas RWA vault + Sophia + Circuit"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "abraxas"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
